# nukhba-prompt

./: .gitignore  AGENTS.md
nukhba-prompt-desktop/: .env  AGENTS.md  MANUAL_TESTING.md  README.md  ROADMAP.md  pyproject.toml
nukhba-prompt-desktop/src/nukhba_prompt_desktop/: __init__.py  main.py
nukhba-prompt-desktop/src/nukhba_prompt_desktop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nukhba-prompt-desktop/src/nukhba_prompt_desktop/app/: orchestrator.py
nukhba-prompt-desktop/src/nukhba_prompt_desktop/services/: __init__.py  clipboard_service.py  notification_service.py  openrouter_service.py  paste_service.py  prompt_optimizer.py  shortcut_service.py  storage_service.py
nukhba-prompt-desktop/src/nukhba_prompt_desktop/ui/: __init__.py  settings_dialog.py  tray.py
nukhba-prompt-desktop/src/nukhba_prompt_desktop/utils/: __init__.py  errors.py  logger.py  paths.py
nukhba-prompt-desktop/tests/: test_openrouter_service.py  test_prompt_optimizer.py  test_storage_service.py
nukhba-prompt-extension/: PR.md  README.md
nukhba-prompt-extension/docs/: mvp-architecture.md  testing-checklist.md
nukhba-prompt-extension/extension/: background.js  content.js  manifest.json  options.html  options.js  styles.css
nukhba-prompt-extension/extension/services/: openrouter-provider.js  prompt-optimizer.js
nukhba-prompt-extension/extension/utils/: constants.js  dom.js  storage.js
